// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size:font-family: Space Grotesk,sans-serif;
  font-size: 1.5625rem;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 2rem;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 500;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="emotion-2 emotion-3"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.discount"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-discount"
          aria-describedby="chart-legend-discount"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-discount"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-discount"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          I am a legend
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size:font-family: Space Grotesk,sans-serif;
  font-size: 1.5625rem;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 2rem;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 500;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="emotion-2 emotion-3"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 400;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.discount"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-discount"
          aria-describedby="chart-legend-discount"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-discount"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-discount"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 2.5rem;
}

.emotion-4 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          I am a legend
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 0.875rem;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 0.5rem;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 0.5rem;
  font-weight: 400;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-46 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #3ebd8f;
}

.emotion-64 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ac2740;
}

.emotion-82 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #9a85ec;
}

.emotion-100 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ff602e;
}

.emotion-118 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #483800;
}

.emotion-136 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #02a5ad;
}

.emotion-154 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ffa488;
}

.emotion-172 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #96edf2;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039,-92.994A93,93,0,0,1,53.82,-75.845L42.886,-60.796A74.4,74.4,0,0,0,1.039,-74.393Z"
                  data-testid="arc.compute"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M55.501,-74.623A93,93,0,0,1,88.122,-29.725L70.431,-23.977A74.4,74.4,0,0,0,44.568,-59.574Z"
                  data-testid="arc.gpu"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
                <path
                  d="M88.764,-27.748A93,93,0,0,1,88.764,27.748L71.073,22A74.4,74.4,0,0,0,71.073,-22Z"
                  data-testid="arc.functions"
                  fill="#3ebd8f"
                  opacity="1"
                  stroke="rgb(43, 132, 100)"
                  stroke-width="0"
                />
                <path
                  d="M88.122,29.725A93,93,0,0,1,55.501,74.623L44.568,59.574A74.4,74.4,0,0,0,70.431,23.977Z"
                  data-testid="arc.containers"
                  fill="#ac2740"
                  opacity="1"
                  stroke="rgb(120, 27, 45)"
                  stroke-width="0"
                />
                <path
                  d="M53.82,75.845A93,93,0,0,1,1.039,92.994L1.039,74.393A74.4,74.4,0,0,0,42.886,60.796Z"
                  data-testid="arc.s3"
                  fill="#9a85ec"
                  opacity="1"
                  stroke="rgb(108, 93, 165)"
                  stroke-width="0"
                />
                <path
                  d="M-1.039,92.994A93,93,0,0,1,-53.82,75.845L-42.886,60.796A74.4,74.4,0,0,0,-1.039,74.393Z"
                  data-testid="arc.dns"
                  fill="#ff602e"
                  opacity="1"
                  stroke="rgb(179, 67, 32)"
                  stroke-width="0"
                />
                <path
                  d="M-55.501,74.623A93,93,0,0,1,-88.122,29.725L-70.431,23.977A74.4,74.4,0,0,0,-44.568,59.574Z"
                  data-testid="arc.appleSilicon"
                  fill="#483800"
                  opacity="1"
                  stroke="rgb(50, 39, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.764,27.748A93,93,0,0,1,-88.764,-27.748L-71.073,-22A74.4,74.4,0,0,0,-71.073,22Z"
                  data-testid="arc.baremetal"
                  fill="#02a5ad"
                  opacity="1"
                  stroke="rgb(1, 115, 121)"
                  stroke-width="0"
                />
                <path
                  d="M-88.122,-29.725A93,93,0,0,1,-55.501,-74.623L-44.568,-59.574A74.4,74.4,0,0,0,-70.431,-23.977Z"
                  data-testid="arc.database"
                  fill="#ffa488"
                  opacity="1"
                  stroke="rgb(179, 115, 95)"
                  stroke-width="0"
                />
                <path
                  d="M-53.82,-75.845A93,93,0,0,1,-1.039,-92.994L-1.039,-74.393A74.4,74.4,0,0,0,-42.886,-60.796Z"
                  data-testid="arc.lb"
                  fill="#96edf2"
                  opacity="1"
                  stroke="rgb(105, 166, 169)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-functions"
          aria-describedby="chart-legend-functions"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-functions"
            />
            <div
              class="emotion-46 emotion-11"
              color="#3ebd8f"
              id="chart-legend-functions"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Serverless Functions
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-containers"
          aria-describedby="chart-legend-containers"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-containers"
            />
            <div
              class="emotion-64 emotion-11"
              color="#ac2740"
              id="chart-legend-containers"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Serverless Containers
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-s3"
          aria-describedby="chart-legend-s3"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-s3"
            />
            <div
              class="emotion-82 emotion-11"
              color="#9a85ec"
              id="chart-legend-s3"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Object Storage
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-dns"
          aria-describedby="chart-legend-dns"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-dns"
            />
            <div
              class="emotion-100 emotion-11"
              color="#ff602e"
              id="chart-legend-dns"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Domain zones
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-appleSilicon"
          aria-describedby="chart-legend-appleSilicon"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-appleSilicon"
            />
            <div
              class="emotion-118 emotion-11"
              color="#483800"
              id="chart-legend-appleSilicon"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Apple Silicon
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-baremetal"
          aria-describedby="chart-legend-baremetal"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-baremetal"
            />
            <div
              class="emotion-136 emotion-11"
              color="#02a5ad"
              id="chart-legend-baremetal"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Baremetal
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-database"
          aria-describedby="chart-legend-database"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-database"
            />
            <div
              class="emotion-154 emotion-11"
              color="#ffa488"
              id="chart-legend-database"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Database
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-lb"
          aria-describedby="chart-legend-lb"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-lb"
            />
            <div
              class="emotion-172 emotion-11"
              color="#96edf2"
              id="chart-legend-lb"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Load Balancer
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pieChart > renders correctly with no props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M0,-93A93,93,0,1,1,0,93A93,93,0,1,1,0,-93M0,-74.4A74.4,74.4,0,1,0,0,74.4A74.4,74.4,0,1,0,0,-74.4Z"
                  data-testid="arc.empty"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
